Add Forrest Gump annotation comment

--- a/essays/templates/essays/article.html
+++ b/essays/templates/essays/article.html
@@ -1,7 +1,14 @@
-<!-- This template is used for housing three articles involving tarot applied to Hollywood film: 
+<!-- 
+
+This template is used for housing three articles involving tarot applied to Hollywood film: 
+
+Previously:
 
 1. The Wizard of Oz
 2. The Matrix
 3. Titanic
+
+But now I'm reconsidering, so maybe:
+* Forrest Gump
 
 -->
