Initialize urls.py+views.py+Jinja w/ blockcontent

--- a/templates/essays/article.html
+++ b/templates/essays/article.html
@@ -1,7 +1,9 @@
-<!-- 
-
-This template is used for housing articles involving 3-5 tarot cards applied to Hollywood film (one article) and Alex Jones (second article).
+{% extends 'base.html' %}
+    
+{% block content %}    
+    This template is used for housing articles involving 3-5 tarot cards applied to Hollywood film (one article) and Alex Jones (second article).
 
 Previously this was for articles profiling the protagonists of The Wizard of Oz, The Matrix and Titanic but now I'm reconsidering, so maybe just Forrest Gump (And of course Alex Jones)
-
 -->
+
+{% endblock %}    
