--- a/templates/essays/content_changelog.html
+++ b/templates/essays/content_changelog.html
@@ -1,1 +1,7 @@
-<!-- This template is a very basic webpage (almost like a simple blog post which shows all the changes made by the author to any of the essays or other written content -->
+{% extends 'base.html' %}
+    
+{% block content %}    
+
+ This template is a very basic webpage (almost like a simple blog post which shows all the changes made by the author to any of the essays or other written content -->
+
+ {% endblock %}    
