--- a/templates/essays/objections.html
+++ b/templates/essays/objections.html
@@ -1,1 +1,7 @@
-<!-- This template will be used to house subsequnt follow up to Slashdot audience after they make their objections online. I will populate this template with my reponses to 10 highest upvoted Slashdot objections -->
+{% extends 'base.html' %}
+    
+{% block content %}    
+
+ This template will be used to house subsequnt follow up to Slashdot audience after they make their objections online. I will populate this template with my reponses to 10 highest upvoted Slashdot objections -->
+
+ {% endblock %}    
