--- a/templates/essays/paper.html
+++ b/templates/essays/paper.html
@@ -1,1 +1,7 @@
-<!-- This template will house tarot analysis (Galileo, FLOSS, St Paul) in long form -->
+{% extends 'base.html' %}
+    
+{% block content %}    
+
+This template will house tarot analysis (Galileo, FLOSS, St Paul) in long form -->
+
+{% endblock %}    
