Customize/pollish topbar/navbar/footer CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <!-- Custom -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="{% static 'css/all.css' %}">
   <title>Tarot Juicer</title>
 
 </head>
