--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -6,7 +6,7 @@
           <i class="fas fa-phone"></i> (617)-555-5555
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> contact@btrealestate.co
+          <i class="fas fa-envelope-open"></i> CRC@DN.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
