--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -1,96 +1,141 @@
 .btn-secondary {
-  color: #fff !important; }
+  color: #fff !important;
+}
 
 img {
-  width: 100%; }
+  width: 100%;
+}
 
 .logo {
-  width: 80px; }
+  width: 80px;
+}
 
 .navbar {
   opacity: 0.9;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .social a {
-  margin-right: 0.4rem; }
+  margin-right: 0.4rem;
+}
 
 #showcase {
   background: url(../img/showcase.jpg) no-repeat top center fixed/cover;
   position: relative;
   min-height: 650px;
   color: #fff;
-  padding-top: 6rem; }
-  #showcase .home-search {
-    min-height: 400px;
-    position: relative;
-    border-radius: 5px; }
-  #showcase .overlay {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 400px;
-    width: 100%;
-    background: rgba(51, 51, 51, 0.8); }
+  padding-top: 6rem;
+}
+#showcase .home-search {
+  min-height: 400px;
+  position: relative;
+  border-radius: 5px;
+}
+#showcase .overlay {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 400px;
+  width: 100%;
+  background: rgba(51, 51, 51, 0.8);
+}
 
 #services {
   background: url(../img/building.jpg) no-repeat top center fixed/cover;
   min-height: 300px;
   position: relative;
-  overflow: hidden; }
-  #services::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 100%;
-    width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
+  overflow: hidden;
+}
+#services::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 100%;
+  width: 100%;
+  background: rgba(32, 134, 107, 0.8);
+}
 
 #showcase-inner {
   background: url(../img/building.jpg) no-repeat top center fixed/cover;
   position: relative;
   overflow: hidden;
-  min-height: 200px; }
-  #showcase-inner::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 100%;
-    width: 100%;
-    background: rgba(32, 134, 107, 0.8); }
-  #showcase-inner.showcase-search {
-    min-height: 270px; }
+  min-height: 200px;
+}
+#showcase-inner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 100%;
+  width: 100%;
+  background: rgba(32, 134, 107, 0.8);
+}
+#showcase-inner.showcase-search {
+  min-height: 270px;
+}
 
 #work {
-  padding: 6rem 0; }
+  padding: 6rem 0;
+}
 
 .listing-preview a {
-  position: relative; }
+  position: relative;
+}
 
 @media (max-width: 991px) {
   #showcase {
-    padding-top: 4rem; }
-    #showcase h1 {
-      font-size: 40px; }
+    padding-top: 4rem;
+  }
+  #showcase h1 {
+    font-size: 40px;
+  }
   .hide-md-down {
-    display: none; } }
+    display: none;
+  }
+}
 
 @media (max-width: 768px) {
   #showcase {
-    padding-top: 3rem; }
-    #showcase h1 {
-      font-size: 40px; }
-    #showcase p {
-      display: none; }
+    padding-top: 3rem;
+  }
+  #showcase h1 {
+    font-size: 40px;
+  }
+  #showcase p {
+    display: none;
+  }
   #top-bar {
-    text-align: center; }
-    #top-bar .social {
-      text-align: center !important; } }
+    text-align: center;
+  }
+  #top-bar .social {
+    text-align: center !important;
+  }
+}
 
 @media (max-width: 576px) {
   #showcase h1 {
-    font-size: 30px; }
+    font-size: 30px;
+  }
   #showcase-inner h1 {
-    font-size: 40px; } }
+    font-size: 40px;
+  }
+}
+
+.bg-primary {
+  background-color: black !important;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.text-white {
+  color: rgba(255, 255, 255, 0.7) !important;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-right: 1rem;
+  padding-left: 0.5rem;
+}
