--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
 <footer id="main-footer" class="py-4 bg-primary text-white text-center">
-    Copyright &copy;
-    <span class="year"></span> BT Real Estate
+    No Rights Reserved: Public Domain <br>
+    <span class="1614"></span> Rose+Croix
 </footer>
