Add Terminator 1 as my contact number to topbar

--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <i class="fas fa-phone"></i> (617)-555-5555
+          <i class="fas fa-phone"></i> 1 (888) 512-1984
         </div>
         <div class="col-md-4">
           <i class="fas fa-envelope-open"></i> CRC@DN.com
