--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -128,11 +128,11 @@ img {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.7);
+  color: crimson;
 }
 
 .text-white {
-  color: rgba(255, 255, 255, 0.7) !important;
+  color: crimson !important;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
