--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
     <div class="container">
       <a class="navbar-brand" href="{% url 'portal' %}">
         <img src="#" class="logo" alt="">
