--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -6,7 +6,7 @@
           <i class="fas fa-phone"></i> 1 (888) 512-1984
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> CRC@DN.com
+          <i class="fas fa-envelope-open"></i> C.R.C@DN.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
