--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,9 @@
-<!-- Footer -->
 <footer id="main-footer" class="py-4 bg-primary text-white text-center">
-    No Rights Reserved: Public Domain <br>
-    <span class="1614"></span> Rose+Croix
+
+    No Rights Reserved 
+    <br> 
+    Public Domain 
+    <br>
+    Rose+Croix
+
 </footer>
