--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -1,4 +1,3 @@
-<!-- Top Bar -->
 <section id="top-bar" class="p-3">
     <div class="container">
       <div class="row">
@@ -6,7 +5,7 @@
           <i class="fas fa-phone"></i> 1 (888) 512-1984
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> C.R.C@DN.com
+          <i class="fas fa-envelope-open"></i> C.R.C@domainname.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
