'about' + 'at_random' plumbing

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Global Initiation</title>
+  <title>The First Initiate</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
@@ -165,13 +165,13 @@ h2 {color: white;}
     <!-- To F/LOSS/GG index.html export:  -->
     <h3><a href="#">@ SLASHDOT</a></h3> 
     
-    <!-- To Oz/Matrix/Titantic article:  -->
+    <!-- To Forrest Gump article:  -->
     <h3><a href="#">@ HOLLYWOOD</a></h3> 
     
     <!-- To St Paul index.html export:  -->
     <h3><a href="#">@ THE WATCHTOWER</a></h3> 
     
-    <!-- To Trump + Alex Jones article:  -->
+    <!-- + Alex Jones article:  -->
     <h3><a href="#">@ AMERIKA</a></h3> 
 
     <!-- Q: -->
@@ -179,12 +179,11 @@ h2 {color: white;}
     
       <br />
     
-    <!-- TO landing page explaining "why" and "what" of this website:  -->
-    <h3><a href="#">(About)</a></h3> 
+    <!-- To landing page explaining "why" and "what" of this website:  -->
+    <h3><a href="{% url 'about' %}">(About)</a></h3> 
+    
     <!-- To generic tarot card introduction landing page:  -->
-    <h3><a href="#">(Tarot at random)</a></h3> 
-    
-    
+    <h3><a href="{% url 'at_random' %}">(Tarot at random)</a></h3> 
   
 </div>
   <div class="more-pens">
