--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,10 +28,10 @@
             <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Tarot at Random</a>
+            <a class="nav-link" href="{% url 'at_random' %}">Tarot at Random</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Site Map</a>
+            <a class="nav-link" href="#"> Site Map</a>
           </li>
         </ul>        
       </div>
