--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Bootstrap -->
