--- a/templates/landings/about.html
+++ b/templates/landings/about.html
@@ -10,8 +10,8 @@
 
 <article class="article">
 <div class="essay">
-<h1> What is going on here?</h1>
 
+<h1> What is going on here?</h1>
 
 <p>Donec porta in augue vitae luctus. Fusce eu dui a est sagittis posuere sit amet in nisl. Ut sed egestas ex. Curabitur pharetra cursus commodo. Morbi dictum ante felis, at sagittis lacus congue sed. Vivamus ut tempor velit, ut lobortis lacus. Donec at odio porttitor, viverra tellus vitae, vulputate augue. Ut tristique hendrerit turpis. Aliquam tempus eu nisl sit amet pulvinar. In pharetra interdum mi at pellentesque. Sed eu nulla eu nulla interdum imperdiet. Etiam nunc turpis, vestibulum tempus magna egestas, tincidunt dapibus mauris.
 
@@ -21,9 +21,8 @@
 
 <p>Praesent eget est cursus, efficitur tellus eget, mollis ligula. Cras vulputate eros malesuada lacus sollicitudin, sit amet vestibulum tortor eleifend. Fusce porttitor mi eget neque rutrum sodales. Fusce laoreet erat sed pellentesque convallis. Aliquam posuere magna diam, id porta enim eleifend ac. In urna metus, pellentesque a odio quis, commodo ultrices nunc. Curabitur iaculis eros libero, vitae mollis lorem mattis id. Sed ut nunc nec sem euismod placerat ut in turpis. Phasellus in pretium elit, non volutpat sapien.</p>
 
-<p>Donec sit amet nisl eu neque luctus lacinia nec ac nisi. Donec est nulla, aliquam non gravida vitae, tristique non velit. Quisque ante urna, faucibus ac tempor quis, aliquet non est. In eleifend sem ac est suscipit tincidunt ultrices vitae mi. Proin augue lorem, laoreet at nunc sit amet, rhoncus viverra neque. Sed eu efficitur erat, eget suscipit erat. Duis ut libero interdum, varius arcu sodales, egestas augue. Donec in velit elit. Pellentesque nec hendrerit quam. Pellentesque orci diam, pharetra gravida molestie ut, rhoncus ut mi. Suspendisse cursus, mauris at aliquet euismod, neque justo ultricies purus, nec feugiat massa lorem et purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras finibus, mi et tempor sollicitudin, massa ipsum sollicitudin est, vel rutrum sapien nibh non nunc. Nulla eget ex a justo congue hendrerit ut posuere nulla.</p>
+<p>Donec sit amet nisl eu neque luctus lacinia nec ac nisi. Donec est nulla, aliquam non gravida vitae, tristique non velit. Quisque ante urna, faucibus ac tempor quis, aliquet non est. In eleifend sem ac est suscipit tincidunt ultrices vitae mi. Proin augue lorem, laoreet at nunc sit amet, rhoncus viverra neque. Sed eu efficitur erat, eget suscipit erat. Duis ut libero interdum, varius arcu sodales, egestas augue. Donec in velit elit. Pellentesque nec hendrerit quam. Pellentesque orci diam, pharetra gravida molestie ut, rhoncus ut mi. Suspendisse cursus, mauris at aliquet euismod, neque justo ultricies purus, nec feugiat massa lorem et purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras finibus, mi et tempor sollicitudin, massa ipsum sollicitudin est, vel rutrum sapien nibh non nunc. Nulla eget ex a justo congue hendrerit ut posuere nulla.</p>-->
 </div><!-- end essay -->
 </article>
-    </div>
-  </div>
+
 {% endblock %}
