--- a/templates/landings/site_map.html
+++ b/templates/landings/site_map.html
@@ -1,9 +1,27 @@
 {% extends 'base.html' %}
     
 {% load static %}
+{% block extra_head %}
+  <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">
+{% endblock %}
 
 {% block content %}    
-<p>[ A description which explains what this site is about ] </p>
+
+<article class="article">
+<div class="essay">   
+<p>Cras auctor dui a lectus accumsan convallis. Phasellus tempus ipsum mattis, posuere sem id, porttitor ipsum. In porta sem purus, in interdum enim venenatis sit amet. Vestibulum suscipit in leo non mattis. Sed eget dui pellentesque, porta erat at, tempus tortor. Donec augue sem, placerat id urna nec, porta aliquet sem. Nam accumsan ipsum quis enim varius pretium. </p>
+<ul>
+    <li>Suspendisse iaculis porttitor purus in ultrices. </li>
+    <li>Sed id nunc auctor, viverra tortor sed, auctor leo. </li>
+    <li>Vestibulum egestas tempor justo ac iaculis. </li>
+</ul>
+<ul>
+    <li>Ut vel justo sed arcu tincidunt vulputate. </li>
+    <li>Duis fermentum, <a href="#">mi ac gravida dictum</a>, lacus ex malesuada eros, eget tempor eros lorem eget magna. </li>
+</ul>
+<p>Aliquam sit amet lacus vel nulla pharetra hendrerit a ut velit. Nulla facilisi. Donec scelerisque sed nulla quis pharetra.</p>
+</div><!-- end essay -->
+</article>
 
 
 {% endblock %}
