I borked model creation - - not sure what is wrong
In this commit I am experimenting with creating models for my random tarot card generator as well as my essay/paper (quasi blog) content but the Django dev server is saying there is an issue importing essays models

--- a/templates/essays/article.html
+++ b/templates/essays/article.html
@@ -1,9 +1,21 @@
+<!-- 
+
+This template is used for housing mutliple articles (like blog posts) with out pulling in the description or data from any of the other apps. These blog posts stand on their own. There are only basic object references such as:
+- models.Title
+- models.TextField
+
+Example content:
+
+e.g. Forrest Gump + Titanic(?)
+e.g. Alex Jones
+
+Previously this was for articles profiling the protagonists of The Wizard of Oz and The Matrix but not any more. 
+
+-->
+
 {% extends 'base.html' %}
     
 {% block content %}    
-    This template is used for housing articles involving 3-5 tarot cards applied to Hollywood film (one article) and Alex Jones (second article).
-
-Previously this was for articles profiling the protagonists of The Wizard of Oz, The Matrix and Titanic but now I'm reconsidering, so maybe just Forrest Gump (And of course Alex Jones)
--->
+    
 
 {% endblock %}    
