Add 'bullets' Models

--- a/templates/essays/curated_st_paul.html
+++ b/templates/essays/curated_st_paul.html
@@ -9,7 +9,7 @@ This template will house tarot analysis (St Paul) in long form with curated list
 - f_loss_content (generators Model)
 - conclusion  (essays Model)
 
-And without any other instances
+And without any other instances/objects
 
 -->
 
