Add task, re: duplicate + incorrect tarot images

--- a/templates/work_orders/first_order.html
+++ b/templates/work_orders/first_order.html
@@ -1,3 +1,7 @@
+<blockquote class="imgur-embed-pub" lang="en" data-id="aIawfHM"><a href="//imgur.com/aIawfHM">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+[Imgur](https://i.imgur.com/aIawfHM.jpg)
+[Imgur](https://i.imgur.com/d4C5hue.jpg)
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,8 +38,6 @@
 <body>
 
 <ol>
-    <li class="orders">Django: generators app: I've got the 'tarot_card_image' object included in an img tag in the template, encapsulated inside the 'generators' loop but the it's like the second and third instances of the image parse in the HTML by taking up the full width of the browser window. Your first task is to explain: Why the first of three instances parse as intended and why the second two take up the full width? Your next task is to ensure that inside the at_random.html template, only a single tarot instance is present at run time.  There are three instances of the generators model in my test case, and there should should one instance per at_random template.  
-  </li>
   <li class="orders">Django: generators app: clicking the “Pull Card At Random” button (template: at_random.html) will generate (or choose at random) from one of the three different tarot cards in the database. The test case I am working with only has 3 different tarot cards to select from. But the production server will have a database of a total of 22 cards to choose from (this content will be uploaded by the admin later).
     <ul><li>This feature will involve using a dynamic integer RegEx combination in the url.py/path when web pages are generated</li></ul>
 </li>
